[package]
name = "plexcryptool"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plexcryptool"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "plexcryptool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
clap-num = "1.0.2"
num = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
primes = "0.3.0"
pyo3 = "0.18.1"
