[package]
name = "plexcryptool"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
version = "0.2.5"
edition = "2021"
readme = "README.md"
description = "Various tools for use with math and cryptology, includes executable and a library."
homepage = "https://git.cscherr.de/PlexSheep/plexcryptool/"
repository = "https://git.cscherr.de/PlexSheep/plexcryptool/"
license = "MIT"
keywords = ["cryptology", "pyo3", "library", "dhbw"]

[lib]
name = "plexcryptool"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "plexcryptool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
clap-num = "1.0.2"
num = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
primes = "0.3.0"
pyo3 = "0.18.1"
